Refactor event handling to use globalid instead of oid; update related functions and comments

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
 
   <!-- Container para filtros e informações dos eventos -->
   <div id="sidebar">
-    <h2>Detalhes do Evento</h2>
+    <h2>Detalhes dos Eventos</h2>
     <div id="eventDetails">
       <!-- Os detalhes dos eventos serão carregados aqui via JS -->
     </div>
