Refactor event handling to use globalid as a string; update related functions and styles for event display

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GeoChain</title>
-  <!-- Link para o CSS principal -->
-  <link rel="stylesheet" href="css/style.css">
   <!-- Link para o ArcGIS API for JavaScript -->
   <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/light/main.css">
   <script src="https://js.arcgis.com/4.24/"></script>
+  <!-- Link para o CSS principal -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- Cabeçalho com título -->
@@ -25,9 +25,7 @@
   <!-- Container para filtros e informações dos eventos -->
   <div id="sidebar">
     <h2>Detalhes dos Eventos</h2>
-    <div id="eventDetails">
-      <!-- Os detalhes dos eventos serão carregados aqui via JS -->
-    </div>
+    <div id="eventDetails"></div>
   </div>
 
   <!-- Inclusão do script principal da aplicação -->
