--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/light/main.css">
   <script src="https://js.arcgis.com/4.24/"></script>
   <!-- Link para o CSS principal -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/x-icon" href="/geochain/app/favicon.ico">
+  <link rel="stylesheet" href="/geochain/app/css/style.css?v=1.0.0">
 </head>
 <body>
   <!-- Cabeçalho com título -->
@@ -17,7 +18,7 @@
   </header>
 
   <!-- Logo -->
-  <img src="assets/logo.png" alt="Logo GeoChain" class="logo">
+  <img src="/geochain/app/assets/logo.png" alt="Logo GeoChain" class="logo">
 
   <!-- Container principal onde o mapa será renderizado -->
   <div id="mapContainer"></div>
@@ -29,6 +30,6 @@
   </div>
 
   <!-- Inclusão do script principal da aplicação -->
-  <script src="js/app.js"></script>
+  <script src="/geochain/app/js/app.js?v=1.0.0"></script>
 </body>
 </html>
